United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7097679 Tiered: events with bad bci to Gotos reduced from Ifs
7097679 : Tiered: events with bad bci to Gotos reduced from Ifs

Details
Type:
Bug
Submit Date:
2011-10-04
Status:
Closed
Updated Date:
2012-01-23
Project Name:
JDK
Resolved Date:
2012-01-23
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs23

Related Reports
Backport:

Sub Tasks

Description
In case with back branches Runtime1::counter_overflow() routine expects to receive a bci of either a Goto of If instruction that generated
the event. When emitting the counter overflow stub for the goto we take the bci from the jvm state. However it is not correct for the gotos 
that were produced as a result of the reduction of Ifs because this case the state will have a bci that would possibly point to a Cmp

                                    

Comments
EVALUATION

See main CR
                                     
2011-10-28
SUGGESTED FIX

The solution is to always store a proper bci for Goto and use it instead of the one in the jvm state.
                                     
2011-10-04
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/940513efe83a
                                     
2011-10-04



Hardware and Software, Engineered to Work Together