7097679: Tiered: events with bad bci to Gotos reduced from Ifs

Save bci of instruction that produced Goto and use it to call back to runtime

Reviewed-by: kvn, never